// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Calculator /> renders 1`] = `
<div
  className="css-zzci37"
/>
`;

exports[`<Calculator /> renders with children 1`] = `
<div
  className="css-zzci37"
>
  <span />
</div>
`;
